<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/background_text_color"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/search_city_title_margin"
        android:text="@string/search_city_title_text"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/search_city_title_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/search_city_name_margin_start"
            android:ems="7"
            android:text="@string/input_string_info_city_name_title_text"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/search_city_name_text_size" />

        <EditText
            android:id="@+id/search_city_city_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:cursorVisible="true"
            android:ems="6"
            android:inputType="text"
            android:text="@string/search_city_name_field_example_text"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/search_city_name_field_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/search_city_country_title_margin_start"
            android:ems="7"
            android:text="@string/search_city_country_title_text"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/search_city_country_title_text_size" />

        <EditText
            android:id="@+id/search_city_country_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:cursorVisible="true"
            android:ems="6"
            android:inputType="text"
            android:text="@string/search_city_country_field_example_text"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/search_city_country_field_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_city_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/search_city_button_cancel_margin"
            android:backgroundTint="@color/background_list_color"
            android:text="@string/search_city_button_cancel_text"
            android:textColor="@color/gray_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_city_button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/search_city_button_ok_margin"
            android:backgroundTint="@color/background_list_color"
            android:text="@string/search_city_button_ok_text"
            android:textColor="@color/gray_text" />
    </LinearLayout>
</LinearLayout>